# POID

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  KNOWN-GAPS.md  NOTICE  README.md  TRADEMARK.md  biome.json  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/cloud/: README.md  package.json
apps/cloud/src/: index.test.ts  index.ts
apps/mcp-server/: README.md  package.json
apps/mcp-server/src/: index.test.ts  index.ts
apps/studio/: README.md  package.json  playwright.config.ts  vitest.config.ts
apps/studio/e2e/: README.md  convert.spec.ts  hub.spec.ts  smoke.spec.ts  studio-app.ts
apps/studio/scripts/: build-ui.mjs
apps/studio/src/: desktop-flow.ts  document-dto.ts  hub-main.ts  index.test.ts  index.ts  reader-main.ts  sql-ipc.ts  tauri-origin.ts  vault-ipc-engine.ts
apps/studio/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns  poid-document.icns
apps/studio/src-tauri/installer/: hooks.nsh
apps/studio/src-tauri/linux/: poid-mime.xml
apps/studio/src-tauri/src/: asset_registry.rs  association.rs  cli.rs  commands.rs  connections.rs  connections_state.rs  convert.rs  document.rs  esbuild_engine.rs  lib.rs  main.rs  state.rs  vault_state.rs  windows.rs
apps/studio/src/hub/: connections.ts  convert.ts  dom.ts  esbuild-build.ts  home.ts  panels.test.ts  panels.ts
apps/studio/static/: index.html  reader.html  styles.css
crates/poid-broker/: Cargo.toml  README.md
crates/poid-broker/src/: binding.rs  connection.rs  error.rs  lib.rs  network.rs  scrub.rs
crates/poid-broker/tests/: binding.rs  network.rs  properties.rs
crates/poid-cli/: Cargo.toml  README.md
crates/poid-cli/src/: commands.rs  main.rs  output.rs  project.rs  stdlib.rs  templates.rs
crates/poid-cli/tests/: cli.rs
crates/poid-connections/: Cargo.toml  README.md
crates/poid-connections/src/: bindings.rs  dsn.rs  error.rs  http.rs  lib.rs  record.rs  secret.rs  sql.rs  store.rs
crates/poid-connections/tests/: brokered_fetch.rs  real_keychain.rs
crates/poid-convert/: Cargo.toml
crates/poid-convert/src/: classify.rs  error.rs  html.rs  imports.rs  infer.rs  lib.rs  manifest.rs  pipeline.rs  stdlib.rs
crates/poid-core/: Cargo.toml  README.md
crates/poid-core/src/: error.rs  integrity.rs  lib.rs  limits.rs  manifest.rs  paths.rs  poid.rs  read.rs  signature.rs  write.rs
crates/poid-core/tests/: malicious.rs  properties.rs  roundtrip.rs
crates/poid-core/tests/common/: mod.rs
crates/poid-fixtures/: Cargo.toml
crates/poid-fixtures/src/: invalid.rs  lib.rs  rawzip.rs  valid.rs
crates/poid-vault/: Cargo.toml  README.md
crates/poid-vault/src/: convert.rs  doc.rs  error.rs  index.rs  lib.rs  protect.rs  sql.rs  store.rs
crates/poid-wasm/: Cargo.toml  README.md
crates/poid-wasm/src/: convert.rs  lib.rs  vault.rs
docs/: ARCHITECTURE.md  RUNTIME-API.md  SECURITY.md  SPEC.md
engines/: esbuild.json  pyodide.json  sqlite.json
examples/: README.md
examples/kanban/: README.md  poid.json
examples/kanban/app/: index.html
scripts/: fetch-esbuild.mjs  fetch-pyodide.mjs  fetch-wheels.mjs  validate-schema.mjs  verify-sql-connection.mjs
spec/: ARCHITECTURE.md  CONFORMANCE.md  RUNTIME-API.md  SECURITY.md  SPEC.md  errors.md
spec/conformance/invalid/: bad-manifest.expected.json  bad-manifest.poid  contains-elf.poid  contains-exe.expected.json  contains-exe.poid  data-container-with-code.expected.json  data-container-with-code.poid  entry-missing.expected.json  entry-missing.poid  integrity-mismatch.expected.json  integrity-mismatch.poid  manifest-app-missing-entry.json  manifest-connection-without-requires.json  manifest-entry-path-traversal.json  mimetype-compressed.expected.json  mimetype-compressed.poid  mimetype-not-first.poid  no-mimetype.expected.json  no-mimetype.poid  path-traversal.expected.json  path-traversal.poid  schema-violation.expected.json  schema-violation.poid  symlink.expected.json  symlink.poid  tampered-signature.expected.json  tampered-signature.poid  workspace-missing-apps.expected.json  workspace-missing-apps.poid  zip-bomb.expected.json  zip-bomb.poid
spec/conformance/manifest/invalid/: manifest-bad-instance-id.json  manifest-missing-type.json
spec/conformance/valid/: data-container.poid  embedded-data.poid  large-but-legal.poid  manifest-app-unknown-fields.json  manifest-app.json  manifest-data.json  minimal-html.poid  protected.poid  python-pyodide.poid  react-app.poid  signed.poid  slots.poid  unknown-manifest-fields.poid  vault-mode.poid  workspace.poid
spec/schema/: manifest.schema.json
tools/wasm-bindgen-driver/: Cargo.toml
tools/wasm-bindgen-driver/src/: main.rs
