[workspace]
resolver = "2"
members = [
    "crates/poid-core",
    "crates/poid-vault",
    "crates/poid-broker",
    "crates/poid-cli",
    "crates/poid-convert",
    "crates/poid-fixtures",
    "crates/poid-wasm",
]
# A build tool, not a product crate: kept out of the workspace so its heavy
# dependency graph (walrus, wasmparser) stays out of `cargo test/clippy`.
exclude = ["tools/wasm-bindgen-driver"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
poid-core = { path = "crates/poid-core" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
