[package]
name = "poid-cli"
description = "poid — the POID command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "poid"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
poid-core.workspace = true
