[package]
name = "poid-cli"
description = "poid — the POID command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "poid"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.61", features = ["derive"] }
ed25519-dalek = "2.2.0"
getrandom = "0.3.4"
poid-core.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
