[package]
name = "poid-connections"
description = "POID Connections: OS keychain storage and the connection registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
# An in-memory secret store for tests. NOT in `default`, so it is compiled out
# of every release build (CONVENTIONS, security rule 5: no "just for
# development" bypass — a feature flag that release does not enable).
test-store = []

[dependencies]
poid-broker = { path = "../poid-broker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
# `default` pulls the `v1` feature: Windows Credential Manager, macOS Keychain,
# and Secret Service over zbus on Linux. zbus is pure Rust, so this still
# builds on a CI runner with no D-Bus development headers installed.
keyring = "4.1.5"

[dev-dependencies]
tempfile = "3"
