[package]
name = "poid-fixtures"
description = "Generator of the POID conformance fixtures, and the raw ZIP builder used to craft hostile ones"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
crc32fast = "1.5"
poid-core.workspace = true
serde_json = "1.0"
zip = { version = "4.2", default-features = false, features = ["deflate"] }

[[bin]]
name = "gen-conformance"
path = "src/bin/gen-conformance.rs"
