[package]
name = "poid-vault"
description = "POID vault: Automerge CRDT storage, slots and instance identity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# `fs` carries everything that touches a filesystem (the store, the instance
# index, mode conversion) plus OS randomness for id generation. The WASM
# build swaps it for `wasm`, which routes the engine's randomness (Automerge
# actor ids) through the browser's crypto instead.
default = ["fs"]
fs = ["dep:sha2", "dep:poid-core", "uuid/v4"]
wasm = ["automerge/wasm"]

[dependencies]
automerge = "0.10"
poid-core = { workspace = true, optional = true }
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3"
