[package]
name = "poid-wasm"
description = "wasm-bindgen bindings over poid-core for the Web Reader"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# `default-features = false` drops the `fs` feature, which is what keeps this
# graph buildable for `wasm32-unknown-unknown` (no tempfile, no std::fs).
poid-core = { path = "../poid-core", default-features = false }
serde_json = "1.0.150"
uuid = "1.20.0"
wasm-bindgen = "=0.2.126"

[dev-dependencies]
poid-fixtures = { path = "../poid-fixtures" }
