[package]
name = "poid-studio"
version = "0.0.1"
description = "POID Studio - the one executable: Reader windows and the Studio hub"
authors = ["POID contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"

# Excluded from the root workspace (see the root Cargo.toml): this crate only
# builds where a system webview exists, so it has its own lockfile and is
# built by the dedicated Studio CI job, not `cargo test --workspace`.

[lib]
name = "poid_studio_lib"
# staticlib/cdylib are required by Tauri's mobile targets (a later milestone);
# desktop uses the rlib.
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
poid-core = { path = "../../../crates/poid-core" }
poid-vault = { path = "../../../crates/poid-vault" }
poid-broker = { path = "../../../crates/poid-broker" }
poid-connections = { path = "../../../crates/poid-connections" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.60", features = ["Win32_UI_Shell"] }

[dev-dependencies]
tempfile = "3"

# The same bars as the workspace (this crate cannot inherit them from there).
[lints.rust]
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# Studio is a desktop application people download, and "~10 MB, not 120 MB" is
# part of what POID claims to be — so the release profile is tuned for size
# rather than left on Cargo's defaults.
#
# M11 added the network and database stacks (reqwest, rustls, tokio-postgres),
# which roughly doubled an unoptimised build. These settings pay most of that
# back. Build time goes up appreciably; that cost lands on CI and on release
# builds, not on anyone developing, since `cargo build` is unaffected.
[profile.release]
# One codegen unit plus LTO lets the linker drop the large parts of these
# dependencies that a POID reader never calls.
codegen-units = 1
lto = true
strip = true
